ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    spec.ingressClassName: traefik   # use "nginx" if nginx-ingress
spec:
  rules:
  - host: k8s.smileshosting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
